Travel::Status::DE::VRR 1.12 - Tue Aug 04 2015

    * EFA: Add static method get_efa_urls
    * Line: Add mot and mot_name accessors
    * Result: Add mot and mot_name accessors
    * efa-m: Add -A / --auto-url / --discover-and-print option
    * efa-m: Add -D / --discover option
    * efa-m: Add --list option
    * efa-m: Add -m / --mot option
    * efa-m: Add -s / --service option

Travel::Status::DE::VRR 1.11 - Tue Jun 30 2015

    * efa-m: Remove -V alias for --version
    * efa-m: Add -V / --track-via option
    * efa-m: Add -O / --output option with outputtypes
      route_after, route_before, fullroute and route
    * efa-m: Always output schedule data when absolute times are requested.
      As before, delays are indicated by a +xyz mark next to the time

Travel::Status::DE::VRR 1.10 - Thu Jun 25 2015

    * Result->delay: return undef when no data is available. This allows to
      distinguish between on-time departures (delay 0) and departures without
      realtime data (delay undef)
    * EFA->new: Add full_routes config option
    * EFA: Add identified_data accessor
    * Result: Add route_pre, route_post and route_interesting accessors
    * Add Travel::Status::DE::EFA::Stop module
    * efa-m: Add -v / --via option

Travel::Status::DE::VRR 1.09 - Thu Apr 30 2015

    * EFA: Fix crash when ->results is called after a network error occured
    * EFA: Add timeout parameter to constructor (default: 10 seconds)
    * efa-m: Add --timeeout option

Travel::Status::DE::VRR 1.08 - Mon Mar 03 2014

    * efa-m: Add -o, --offset option
    * Fix ->platform and ->platform_db accessors (the EFA API was changed)

Travel::Status::DE::VRR 1.07 - Tue Jan 07 2014

    * efa-m: Add previously undocumented -L option to manual
    * efa-m: Handle UTF8 in place/stop input
    * Travel::Status::DE::EFA: Handle decoded input with non-ASCII characters

Travel::Status::DE::VRR 1.06 - Thu Jan 02 2014

    * Add Travel::Status::DE::EFA module, move ::Result and ::Line to